CHANGES IN FLTK 1.1.0b9

	- Add Fl_BMP_Image class to support loading of Windows
	  bitmap (BMP) files.
	- The shiny demo didn't work on some systems (no
	  single-buffered OpenGL visual), and the new box types
	  were reset when show(argc, argv) was called.
	- Fl::scheme() didn't update windows that were not
	  shown.
	- The fractals demo would get far ahead of the UI with
	  some Linux OpenGL drivers.  Now use glFinish() instead
	  of glFlush() so we are at most 1 frame ahead.
	- The fractals demo Y axis controls were backwards for
	  the "flying" mode.
	- MacOS: cleaned up src/Fl_mac.cxx
	- MacOS: fixed Fl::wait(0.0), fixed Cmd-Q handling
	- Update CygWin support for Fl::add_fd().
	- Update the plastic scheme to not override the default
	  colors - move the color code to the MacOS-specific
	  code.  Also updates the tile image colormap to match
	  the current background color.
	- Add fl_parse_color() to X11 as well, removing a bunch
	  of conditional code and providing a common interface
	  for looking up color values.
	- Fixed the make problems in the test directory - some
	  make programs had trouble handling the recursive
	  dependencies on the FLUID files...
	- Now use rint() to round floating-point coordinates.
	- Demo cleanup - made sure they all worked with schemes.
	- Fl_Tabs no longer clears the unused area of the tab
	  bar.
	- Added show(argc, argv) method to Fl_Help_Dialog.
	- MacOS: implemented cut/copy/paste.
	- MacOS: improved keyboard handling, fixed keyboard
	  focus handling, fixed get_key, modified 'keyboard'
	  demo to show second mouse wheel and additional keys
	  'help' and FL_NK+'='


CHANGES IN FLTK 1.1.0b8

	- OS/2 build fixes.
	- fl_draw() didn't ignore symbol escapes properly for
	  the browsers...
	- New Fl::scheme() methods from FLTK 2.0; currently only
	  the standard ("") and plastic ("plastic") methods are
	  supported.  Schemes can be set on the command-line
	  ("-scheme plastic") or using the FLTK_SCHEME
	  environment variable.