@@ -1,5 +1,5 @@
 #
-# "$Id: fltk.list.in,v 1.1.2.3 2002/01/06 13:40:28 easysw Exp $"
+# "$Id: fltk.list.in,v 1.1.2.4 2002/01/07 18:47:27 easysw Exp $"
 #
 # EPM product list file for the Fast Light Tool Kit (FLTK).
 #
@@ -105,6 +105,7 @@ l 0000 root sys $includedir/FL/Enumerations.h Enumerations.H
 l 0000 root sys $includedir/FL/Fl.h Fl.H
 l 0000 root sys $includedir/FL/Fl_Adjuster.h Fl_Adjuster.H
 l 0000 root sys $includedir/FL/Fl_Bitmap.h Fl_Bitmap.H
+l 0000 root sys $includedir/FL/Fl_BMP_Image.h Fl_BMP_Image.H
 l 0000 root sys $includedir/FL/Fl_Box.h Fl_Box.H
 l 0000 root sys $includedir/FL/Fl_Browser.h Fl_Browser.H
 l 0000 root sys $includedir/FL/Fl_Browser_.h Fl_Browser_.H
@@ -216,5 +217,5 @@ f 0444 root sys $datadir/doc/fltk/COPYING COPYING
 f 0444 root sys $datadir/doc/fltk/CHANGES CHANGES
 
 #
-# End of "$Id: fltk.list.in,v 1.1.2.3 2002/01/06 13:40:28 easysw Exp $".
+# End of "$Id: fltk.list.in,v 1.1.2.4 2002/01/07 18:47:27 easysw Exp $".
 #
